crash fix - avoid wrong gcc optimization

This fixes a crash that gcc optimized the code in the
way that inspectedObjects->contains(object) executed
at a nullptr. (only release only some gcc versions)

This was already fixed in the past but reintroduced by
another commit in the past.

Task-number: QTBUG-94798
Change-Id: I9759f3347712f706dd99303ce9d804667c1525f3
Reviewed-by: Marco Bubke <marco.bubke@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
(cherry picked from commit e865d977f6b6b0e3f7e7e61e4a9200f047b0213e)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>