src/quick/designer/qquickdesignersupportproperties_p.h
@@ -90,9 +90,7 @@ public:
 
     static void getPropertyCache(QObject *object, QQmlEngine *engine);
     static bool isPropertyBlackListed(const QQuickDesignerSupport::PropertyName &propertyName);
-    static QQuickDesignerSupport::PropertyNameList propertyNameListForWritableProperties(QObject *object,
-                                                                  const QQuickDesignerSupport::PropertyName &baseName = QQuickDesignerSupport::PropertyName(),
-                                                                  QObjectList *inspectedObjects = nullptr);
+    static QQuickDesignerSupport::PropertyNameList propertyNameListForWritableProperties(QObject *object);
     static QQuickDesignerSupport::PropertyNameList allPropertyNames(QObject *object,
                                              const QQuickDesignerSupport::PropertyName &baseName = QQuickDesignerSupport::PropertyName(),
                                              QObjectList *inspectedObjects = nullptr);
